--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "http:/babulisahoo.github.io/ReactProps",
+  "homepage": "http:/babulisahoo.github.io/MultiStateReact",
   "name": "multistatereact",
   "version": "1.0.0",
   "description": "",
